# cosmic-virtual-keyboard

./: .gitignore  COSMIC_STORE_SUBMISSION.md  Cargo.toml  LICENSE  Makefile  README.md  STORE_SUBMISSION_ACTION_PLAN.md  SUBMIT_TO_COSMIC_FLATPAK.md  com.cosmic.VirtualKeyboard.appdata.xml  com.cosmic.VirtualKeyboard.yml  cosmic-virtual-keyboard.desktop  generate-cargo-sources.sh  io.github.aquilesorei.Spaceboard.appdata.xml  setup.sh  spaceboard.desktop
screenshots/: README.md  example_in_cosmic-edit
src/: lib.rs  main.rs  window.rs
